objects/SVC_Doc_URL__c.object
<CustomObject>
    <fields>
        <fullName>Doc_URL__c</fullName>
        <label>Doc URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SVC__c</fullName>
        <label>SVC</label>
        <referenceTo>SVC__c</referenceTo>
        <relationshipLabel>SVC Doc URL</relationshipLabel>
        <relationshipName>SVC_Doc_URL</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SVC_Doc_URL</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SVC Doc URL</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Doc-{000000}</displayFormat>
        <label>SVC Doc URL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>